<resources>
    <string name="app_name">RegistrationTask</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_now">Sign up Now !</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_in_with_social_networks">Sign in with Social Networks</string>

</resources>