<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="SignInActivity">

    <ImageView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_LogoHeight"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_25ButtonMargin"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:layout_marginEnd="@dimen/_25ButtonMargin"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginStart="@dimen/editTextMargin"
        android:layout_marginEnd="@dimen/editTextMargin"
        android:backgroundTint="@color/gray_100"
        android:drawableStart="@drawable/ic_mail"
        android:drawableTint="@color/drawableTint"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/gray_100"
        android:textColorHint="@color/gray_100"
        android:textSize="@dimen/textEditTextSize"
        app:layout_constraintTop_toBottomOf="@id/textSignIn" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginStart="@dimen/editTextMargin"
        android:layout_marginEnd="@dimen/editTextMargin"
        android:backgroundTint="@color/gray_100"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/drawableTint"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/gray_100"
        android:textColorHint="@color/gray_100"
        android:textSize="@dimen/textEditTextSize"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSigninHeight"
        android:layout_marginStart="@dimen/buttonSignInMarginEnd"
        android:layout_marginTop="@dimen/buttonSignInMarginTop"
        android:layout_marginEnd="@dimen/buttonSignInMarginEnd"
        android:background="@drawable/shape_button_one"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <LinearLayout
        android:id="@+id/containerSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/haveAccountContainerMarginTop"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn">

        <TextView
            android:id="@+id/textNotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/haveAccountMarginEnd"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:textColor="@color/blue"
            android:textSize="17sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/textOrMarginTop"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="@dimen/textOrSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerSignUp" />

    <View
        android:layout_width="@dimen/dividerWidth"
        android:layout_height="@dimen/dividerHeight"
        android:layout_margin="@dimen/dividerMargin"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@id/textOr"
        app:layout_constraintTop_toTopOf="@id/textOr" />

    <View
        android:layout_width="@dimen/dividerWidth"
        android:layout_height="@dimen/dividerHeight"
        android:layout_margin="@dimen/dividerMargin"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/textOr"
        app:layout_constraintTop_toTopOf="@id/textOr" />


    <TextView
        android:id="@+id/textSocialNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/textSocialNetworkMarginTop"
        android:text="@string/sign_in_with_social_networks"
        android:textColor="@color/gray_100"
        android:textSize="@dimen/textEditTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOr" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/textOr"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSocialNetwork">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonSocialHeight"
            android:layout_marginStart="@dimen/_25ButtonMargin"
            android:layout_marginEnd="@dimen/_25ButtonMargin"
            android:layout_weight="1"
            android:background="@drawable/shape_button_one"
            android:drawableStart="@drawable/ic_facebook"
            android:gravity="center"
            android:paddingStart="@dimen/buttonMarginStart"
            android:paddingEnd="@dimen/buttonSocialMarginEnd"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/facebookColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonSocialHeight"
            android:layout_marginStart="@dimen/buttonSocialMarginStart"
            android:layout_marginEnd="@dimen/buttonSocialMarginEnd"
            android:layout_weight="1"
            android:background="@drawable/shape_button_one"
            android:drawableStart="@drawable/ic_google_plus"
            android:gravity="center"
            android:paddingStart="@dimen/buttonSocialPaddingStart"
            android:paddingEnd="@dimen/buttonSocialPaddingEnd"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/red" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>